--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,6 +6,8 @@
         <title>Board List</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="_csrf" th:content="${_csrf.token}"/>
+        <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" th:href="@{/css/header.css}">
         <link rel="stylesheet" th:href="@{/css/content.css}">
@@ -78,7 +80,10 @@
                     </div>
                 </div>
                 <a sec:authorize="isAnonymous" href="/join">회원가입</a>
-                <a sec:authorize="isAuthenticated()" href="/logout">로그아웃</a>
+                <form sec:authorize="isAuthenticated()" method="post" th:action="@{/logout}">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                    <input type="submit" style=" width: 70px; font-size: 12px;" class="btn btn-secondary" value="로그아웃" />
+                </form>
 
             </div>
         </div>
@@ -86,6 +91,9 @@
     <script>
         let pageNumber = 0;
         let pageLast = true;
+        const token = $("meta[name='_csrf']").attr("content")
+        const header = $("meta[name='_csrf_header']").attr("content");
+
 
 
         $(document).ready(function() {
@@ -134,6 +142,9 @@
                                        $notificationList.append($li);
                                    });
                                }
+                            },
+                            beforeSend : function(xhr) {
+                                xhr.setRequestHeader(header, token);
                             },
                             error: function(e) {
                                 console.log(e);
