--- a/src/main/resources/templates/send_note.html
+++ b/src/main/resources/templates/send_note.html
@@ -3,6 +3,8 @@
 <html lang="ko" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>쪽지 보내기</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -42,7 +44,9 @@
 </div>
 
 <script th:inline="javascript">
-   $('#message-form').submit(function(event) {
+    const token = $("meta[name='_csrf']").attr("content")
+    const header = $("meta[name='_csrf_header']").attr("content");
+    $('#message-form').submit(function(event) {
                               event.preventDefault();
                               const recipient = $('#recipient').val();
                               const message = $('#message').val();
@@ -58,6 +62,9 @@
                                        alert(data);
                                        window.close();
                                 　　}
+                                   , beforeSend : function(xhr) {
+                                                xhr.setRequestHeader(header, token);
+                                    }
                                    , error:function(e) {
                                        alert(e.responseText);
                                 　　}
