--- a/src/main/resources/templates/user_login.html
+++ b/src/main/resources/templates/user_login.html
@@ -22,6 +22,7 @@
          </div>
         <!-- Spring Security 로그인 -->
          <form class="form-signin" method="post" th:action="@{/login/proc}">
+             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
              <!-- 아이디 입력창 -->
              <input th:value="${userId}" type="text" id="username" name="email" class="form-control" placeholder="아이디" autofocus="" />
              <!-- 비밀번호 입력창 -->
