--- a/src/main/resources/templates/user_join.html
+++ b/src/main/resources/templates/user_join.html
@@ -35,7 +35,7 @@
     <script th:inline="javascript">
         var idcheckdstate = "false";
         var nickcheckdstate = "false";
-        const token = $("meta[name='_csrf']").attr("content")
+        const token = $("meta[name='_csrf']").attr("content");
         const header = $("meta[name='_csrf_header']").attr("content");
         // ID 중복체크
         function idcheck() {
