--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -309,12 +309,12 @@ display:flex;
 /* 알림 팝업 메인 */
 .notification {
                  width:250px;
-                 overflow-y: auto;
+                overflow-x: hidden;
                 height: 400px; /* 원하는 높이로 설정 */
                 overflow-y: auto; /* 세로 스크롤 가능하게 설정 */
                 border: 1px solid #ccc; /* 테두리 설정 */
                 background-color: #fff; /* 배경색 설정 */
-                position: absolute; /* 위치를 절대값으로 설정 */
+                position: absolute;
 }
 /* 알림 팝업 상단바 */
 .notification-popup {
@@ -364,4 +364,20 @@ display:flex;
             font-size: 12px;
             margin-top: 5px; /* 시간과 텍스트 사이의 간격 추가 */
 }
+/* 알림 메세지 비우기 버튼 div */
+.button-container {
+            position: absolute;
+            right: -100px; /* 숨기기 */
+            bottom: 300px;
+            height: 100px;
+            cursor: grab;
+            display: flex;
+            align-items: center;
+            transition: right 0.3s ease;
+}
+/* 알림 메세지 비우기 버튼 표시 */
+.button-container.show {
+            right: -30px; /* 버튼 보이기 */
+            bottom: 1px;
+        }
 
